<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 National Institute of Informatics
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:title="@string/pref_title_service"
        app:summary="@string/pref_summary_service"
        app:fragment="jp.ad.sinet.stream.android.sample.ui.settings.ServiceSettingsFragment"/>

    <Preference
        app:title="@string/pref_title_brokers"
        app:summary="@string/pref_summary_brokers"
        app:fragment="jp.ad.sinet.stream.android.sample.ui.settings.BrokerSettingsFragment"/>

    <Preference
        app:title="@string/pref_title_mqtt"
        app:summary="@string/pref_summary_mqtt"
        app:fragment="jp.ad.sinet.stream.android.sample.ui.settings.MqttSettingsFragment"/>

    <Preference
        app:title="@string/pref_title_userauth"
        app:summary="@string/pref_summary_userauth"
        app:fragment="jp.ad.sinet.stream.android.sample.ui.settings.UserAuthSettingsFragment"/>

    <Preference
        app:title="@string/pref_title_tls"
        app:summary="@string/pref_summary_tls"
        app:fragment="jp.ad.sinet.stream.android.sample.ui.settings.TlsSettingsFragment"/>

    <Preference
        app:title="@string/pref_title_crypto"
        app:summary="@string/pref_summary_crypto"
        app:fragment="jp.ad.sinet.stream.android.sample.ui.settings.CryptoSettingsFragment"/>
</PreferenceScreen>
